--- a/Data Science 101-2.ipynb
+++ b/Data Science 101-2.ipynb
@@ -2326,7 +2326,7 @@
     "```\n",
     "Answer:\n",
     "\n",
-    "TODTODOTODOTODOTODOTODOTODOTODOTODOO\n",
+    "They have a GrLivArea > 4500 and Saleprice < 300000\n",
     "```\n",
     "***"
    ]
